--- a/gamemanager/src/main/resources/application.properties
+++ b/gamemanager/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #JDBC
-spring.datasource.url=jdbc:h2:~/project
+spring.datasource.url=jdbc:h2:tcp://localhost/~/project
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.datasource.driver-class-name=org.h2.Driver
@@ -7,4 +7,5 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
