--- a/gamemanager/src/main/resources/application.properties
+++ b/gamemanager/src/main/resources/application.properties
@@ -1,11 +1,20 @@
 #JDBC
-spring.datasource.url=jdbc:h2:tcp://localhost/~/project
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/project
+#spring.datasource.username=sa
+#spring.datasource.password=sa
+#spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.username=DAMSMGR
+spring.datasource.password=damsmgr
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 
 # JPA (JpaBaseConfiguration, HibernateJpaAutoConfiguration)
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+
+#Security cfg 
+#spring.security.user.name=defaultuser
+#spring.security.user.password=password
+#spring.security.user.roles=DEFAULT_ROLE
